objects/NewCategory__c.object
<CustomObject>
    <fields>
        <fullName>ALLOW_COMMENTS_AND_ATTACHMENTS__c</fullName>
        <label>ALLOW COMMENTS AND ATTACHMENTS</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FALSE</fullName>
                </value>
                <value>
                    <fullName>TRUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>Scorchy__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CATEGORY__c</fullName>
        <label>CATEGORY</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTEXT_OBJECT__c</fullName>
        <label>CONTEXT OBJECT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTEXT_TYPE__c</fullName>
        <label>CONTEXT TYPE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CONTROL_NAME__c</fullName>
        <label>CONTROL NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_BY_ID__c</fullName>
        <label>CREATED BY ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_DATE__c</fullName>
        <label>CREATED DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DELETED__c</fullName>
        <label>DELETED</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DESCRIPTION__c</fullName>
        <label>DESCRIPTION</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FIELD_CLASS__c</fullName>
        <label>FIELD CLASS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FIELD_NAME__c</fullName>
        <label>FIELD NAME</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FIELD_TYPE__c</fullName>
        <label>FIELD TYPE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KEYWORDS__c</fullName>
        <label>KEYWORDS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QUESTION_INSTRUCTION__c</fullName>
        <label>QUESTION/INSTRUCTION</label>
        <type>TextArea</type>
    </fields>
    <label>NewCategory</label>
    <nameField>
        <label>17690 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewCategories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>